# slack-skills-plugin

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.agents/plugins/: marketplace.json
.changeset/: README.md  add-codex-plugin-surface.md  align-plugin-manifest-metadata.md  announce-releases-on-slack.md  block-kit-additional-patterns.md  block-kit-cli-preview.md  clarify-docs-search-boundary.md  rename-repo-to-slack-skills-plugin.md  restructure-plugin-into-subdirectory.md
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/: contributing.md  dependabot.yml  maintainers_guide.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 01-bug-mcp.yml  02-bug-skill.yml  config.yml
.github/workflows/: ci-build.yml  release.yml
commands/: channel-digest.md  standup.md
docs/: slack-app-setup.md
scripts/: changeset_version.sh  cursor.py  new_changeset.py  seed_package_json.py  sync_plugin_versions.py  sync_versions.py
skills/block-kit/: SKILL.md
skills/create-slack-app/: SKILL.md
skills/slack-api/: SKILL.md
skills/slack-cli/: SKILL.md
skills/slack-docs/: SKILL.md
skills/slack-messaging/: SKILL.md
src/: bridge.ts  gating.ts  index.ts  mcp.ts  reactions.ts  settings.ts  slack.ts
tests/: bridge.test.ts  config.py  gating.test.ts  integration.test.ts  mcp.test.ts  reactions.test.ts  settings.test.ts  skill.py
tests/eval/: test_tool_selection.py
tests/support/: mcp.py  (+3 more)
(+15 files in other folders)
